--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -3,21 +3,16 @@ form {
   display: flex;
   flex-direction: column;
 }
-label {
-  font-family: Verdana, sans-serif;
-  font-size: 1.2em;
-  line-height: 1.2em;
-  margin-bottom: 20px;
-}
 input {
   height: 30px;
   border: 0;
-  border-bottom: 1px solid #000;
+  border-bottom: 2px solid #000;
   font-size: 1.2em;
-  width: 80%;
   outline: none;
+  margin-top: 50px;
+  background: transparent;
 }
-.wrapper {
+.search-wrapper {
   width: 100%;
   padding: 30px;
   margin: 0;
@@ -28,16 +23,19 @@ input {
 
 .search {
   width: 300px;
+  display: flex;
 }
 .btn {
   width: 100px;
-  margin-top: 20px;
+  height: 50px;
+  margin: 50px auto 0 auto;
   background: transparent;
-  border: 1px solid black;
+  border: 2px solid black;
   border-radius: 5px;
   padding: 5px 10px;
   outline: none;
-  font-size: 1.1em;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 .btn:hover {
   cursor: pointer;
