--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -2,10 +2,23 @@
   background: #f0f0f0;
   max-width: 100%;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
+}
+.outer-wrapper button {
+  margin: 10px 15px;
+  color: #000;
+  padding: 5px 15px;
+  border-radius: 5px;
+  border: 1px solid #333;
+  background: #fff;
+  transition: 0.3s;
+}
+.outer-wrapper button:hover {
+  background: #333;
+  color: #fff;
 }
 
 .inner-wrapper {
@@ -19,14 +32,14 @@
 
 .photo {
   max-width: 90%;
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   background: black;
 }
 
 .photo img {
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
 }
 .close {
   position: absolute;
@@ -56,11 +69,30 @@
 .description {
   color: #333;
 }
+.title {
+  font-size: 1.1em;
+}
+.description-text span {
+  line-height: 1.3em;
+}
+@media (min-width: 500px) {
+  .photo {
+    max-width: 90%;
+    width: 300px;
+    height: 300px;
+    background: black;
+  }
+
+  .photo img {
+    width: 300px;
+    height: 300px;
+  }
+}
 
 @media (min-width: 750px) {
   .outer-wrapper {
     max-width: 70%;
-    height: 60%;
+    height: 70%;
     left: 0;
     right: 0;
     top: 30px;
@@ -68,10 +100,31 @@
     margin: auto;
     box-shadow: 0 30px 30px -10px rgba(0, 0, 0, 0.3);
   }
+  .description {
+    margin-left: 10px;
+  }
   .inner-wrapper {
     flex-direction: row;
   }
   .photo {
+    width: 200px;
+    height: 200px;
+  }
+  .photo img {
     margin-right: 20px;
+    width: 200px;
+    height: 200px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .photo {
+    width: 300px;
+    height: 300px;
+  }
+  .photo img {
+    margin-right: 20px;
+    width: 300px;
+    height: 300px;
   }
 }
